--- a/index.html
+++ b/index.html
@@ -97,12 +97,14 @@
 			<div class="content">
 				<div class="left">
 					<ul>
-						<li><a href="#">Hotel</a></li>
+						<li><a href="https://lee-jhaa.github.io/hnc/">hnc</a></li>
 					</ul>
 				</div>
 				
 				<div class="right">
-				
+					<ul>
+						<li><a href="https://lee-jhaa.github.io/hnc/">hnc</a></li>
+					</ul>
 				</div>
 			</div>
 		</section>
